[fleet] tests refactoring
* modularize tests
* reuse production launcher in tests
* load bundles similar way in tests
* cleanup the test framework WIP
* run sagas on a more nested scope to prevent errors during shutdown
* enforce structured concurrency
* delete TestOrchestrator and WorkspaceServer classes

GitOrigin-RevId: 45c62e264e8c2b8fee272b436643d9fca6fde574